--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "license": "ISC",
     "dependencies": {
         "discord.js": "^12.5.1",
-        "node-schedule": "^1.3.2"
+        "node-schedule": "^1.3.2",
+        "sequelize": "^6.3.5"
     }
 }
