--- a/package.json
+++ b/package.json
@@ -1,17 +1,26 @@
 {
-    "name": "dyskusja-bot",
-    "version": "1.0.0",
-    "description": "",
-    "main": "index.js",
-    "scripts": {
-        "start": "node index.js"
-    },
-    "keywords": [],
-    "author": "",
-    "license": "ISC",
-    "dependencies": {
-        "discord.js": "^12.5.1",
-        "node-schedule": "^1.3.2",
-        "sequelize": "^6.3.5"
-    }
+  "name": "dyskusja-bot",
+  "version": "1.0.0",
+  "main": "index.js",
+  "scripts": {
+    "start": "node index.js"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "dependencies": {
+    "discord.js": "^12.5.1",
+    "node-schedule": "^1.3.2",
+    "sequelize": "^6.3.5"
+  },
+  "devDependencies": {},
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Izarothy/dyskusja-bot.git"
+  },
+  "bugs": {
+    "url": "https://github.com/Izarothy/dyskusja-bot/issues"
+  },
+  "homepage": "https://github.com/Izarothy/dyskusja-bot#readme",
+  "description": ""
 }
