--- a/package.json
+++ b/package.json
@@ -11,10 +11,18 @@
   "dependencies": {
     "discord.js": "^12.5.1",
     "dotenv": "^8.2.0",
+    "mongoose": "^5.11.15",
+    "ms": "^2.1.3",
     "node-schedule": "^1.3.2",
-    "sequelize": "^6.3.5"
+    "sequelize": "^6.5.0",
+    "sqlite3": "^5.0.2"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "@babel/cli": "^7.13.0",
+    "@babel/core": "^7.13.8",
+    "@babel/node": "^7.13.0",
+    "@babel/preset-env": "^7.13.9"
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/Izarothy/dyskusja-bot.git"
