--- a/package.json
+++ b/package.json
@@ -17,12 +17,7 @@
     "sequelize": "^6.5.0",
     "sqlite3": "^5.0.2"
   },
-  "devDependencies": {
-    "@babel/cli": "^7.13.0",
-    "@babel/core": "^7.13.8",
-    "@babel/node": "^7.13.0",
-    "@babel/preset-env": "^7.13.9"
-  },
+  "devDependencies": {},
   "repository": {
     "type": "git",
     "url": "git+https://github.com/Izarothy/dyskusja-bot.git"
