--- a/config.json
+++ b/config.json
@@ -1,5 +1,5 @@
 {
-    "prefix": "!",
-    "meme_id": "484659760201728001",
-    "minecraft_id": "600767010317795331"
+  "meme_id": "484659760201728001",
+  "minecraft_id": "600767010317795331",
+  "addQuoteCommand": "!dodajcytat"
 }
