refactor: delete useless code, move commands to slash commands / separate files

--- a/config.json
+++ b/config.json
@@ -1,4 +1,6 @@
 {
+  "guildId": "484645229371064332",
+  "clientId": "795306003293274112",
   "meme_id": "484659760201728001",
   "minecraft_id": "600767010317795331",
   "addQuoteCommand": "!dodajcytat"
