--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@discordjs/builders": "^0.12.0",
+    "@discordjs/rest": "^0.3.0",
+    "discord-api-types": "^0.26.1",
     "discord.js": "^13.1.0",
     "dotenv": "^8.2.0",
     "mongoose": "^5.13.13",
@@ -16,7 +19,8 @@
     "node-schedule": "^2.1.0",
     "npm": "^8.3.0",
     "sequelize": "^6.5.0",
-    "sqlite3": "^5.0.2"
+    "sqlite3": "^5.0.2",
+    "tar": "^6.1.11"
   },
   "description": "",
   "engines": {
